--- a/CryptoWCFService/Web.config
+++ b/CryptoWCFService/Web.config
@@ -9,6 +9,11 @@
     <httpRuntime targetFramework="4.6.1"/>
   </system.web>
   <system.serviceModel>
+    <services>
+      <service name="CryptoWCFService.CryptoService">
+        <endpoint address="" binding="basicHttpBinding" contract="CryptoWCFService.ICryptoService" />
+      </service>
+    </services>
     <behaviors>
       <serviceBehaviors>
         <behavior>
