--- a/CryptoApp/App.config
+++ b/CryptoApp/App.config
@@ -3,4 +3,16 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="BasicHttpBinding_ICryptoService" />
+            </basicHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://localhost:57505/CryptoService.svc"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ICryptoService"
+                contract="ServiceReference1.ICryptoService" name="BasicHttpBinding_ICryptoService" />
+        </client>
+    </system.serviceModel>
 </configuration>
