--- a/CryptoLib/CryptoLib.csproj
+++ b/CryptoLib/CryptoLib.csproj
@@ -47,5 +47,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XTEA.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
