--- a/CryptoLib/CryptoLib.csproj
+++ b/CryptoLib/CryptoLib.csproj
@@ -43,6 +43,7 @@
     <Compile Include="DoubleTransposition.cs" />
     <Compile Include="ICrypto.cs" />
     <Compile Include="Knapsack.cs" />
+    <Compile Include="MD5.cs" />
     <Compile Include="OFB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XTEA.cs" />
