MD5 Implementation Finished; WCF Service Working

--- a/CryptoApp/App.config
+++ b/CryptoApp/App.config
@@ -12,7 +12,7 @@
         <client>
             <endpoint address="http://localhost:57505/CryptoService.svc"
                 binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ICryptoService"
-                contract="ServiceReference1.ICryptoService" name="BasicHttpBinding_ICryptoService" />
+                contract="CryptoServiceReference.ICryptoService" name="BasicHttpBinding_ICryptoService" />
         </client>
     </system.serviceModel>
 </configuration>
