FSW with Queue initial setup; MD5 fix for multiple blocks

--- a/CryptoApp/CryptoApp.csproj
+++ b/CryptoApp/CryptoApp.csproj
@@ -47,6 +47,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\FileCypher.cs" />
+    <Compile Include="Classes\FileProcessor.cs" />
     <Compile Include="Classes\Settings.cs" />
     <Compile Include="Connected Services\CryptoServiceReference\Reference.cs">
       <AutoGen>True</AutoGen>
