Stream upload done (XTEA version, progress bar doesn't work); Download doesn't work

--- a/CryptoApp/App.config
+++ b/CryptoApp/App.config
@@ -6,13 +6,20 @@
     <system.serviceModel>
         <bindings>
             <basicHttpBinding>
-                <binding name="BasicHttpBinding_ICryptoService" />
+                <binding name="BasicHttpBinding_ICryptoService" 
+                         maxReceivedMessageSize="20000000"/>
+                <binding name="BasicHttpBinding_ICloudService" messageEncoding="Mtom" 
+                         maxReceivedMessageSize="10067108864"
+                         transferMode="Streamed"/>
             </basicHttpBinding>
         </bindings>
         <client>
             <endpoint address="http://localhost:57505/CryptoService.svc"
                 binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ICryptoService"
                 contract="CryptoServiceReference.ICryptoService" name="BasicHttpBinding_ICryptoService" />
+            <endpoint address="http://localhost:57505/CloudService.svc" binding="basicHttpBinding"
+                bindingConfiguration="BasicHttpBinding_ICloudService" contract="CloudServiceReference.ICloudService"
+                name="BasicHttpBinding_ICloudService" />
         </client>
     </system.serviceModel>
 </configuration>
