--- a/CryptoWCFService/Web.config
+++ b/CryptoWCFService/Web.config
@@ -11,7 +11,17 @@
   <system.serviceModel>
     <services>
       <service name="CryptoWCFService.CryptoService">
-        <endpoint address="" binding="basicHttpBinding" contract="CryptoWCFService.ICryptoService" />
+        <endpoint address="" binding="basicHttpBinding"
+                  bindingConfiguration="EncryptionServicesBinding"
+                  contract="CryptoWCFService.ICryptoService" />
+      </service>
+      <service behaviorConfiguration="CryptoWCFService.FileTransferServiceBehavior"
+               name="CryptoWCFService.CloudService">
+        <clear/>
+        <endpoint address="" binding="basicHttpBinding"
+                  bindingConfiguration="FileTransferServicesBinding"
+                  contract="CryptoWCFService.ICloudService"></endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"></endpoint>
       </service>
     </services>
     <behaviors>
@@ -22,8 +32,23 @@
           <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
           <serviceDebug includeExceptionDetailInFaults="false"/>
         </behavior>
+        <behavior name="CryptoWCFService.FileTransferServiceBehavior">
+          <serviceMetadata httpGetEnabled ="true"/>
+          <serviceDebug includeExceptionDetailInFaults="false"/>
+        </behavior>
       </serviceBehaviors>
     </behaviors>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="EncryptionServicesBinding"
+                 maxReceivedMessageSize="20000000" />
+        <binding name="FileTransferServicesBinding"
+                 transferMode ="Streamed"
+                 messageEncoding="Mtom"
+                 sendTimeout="01:05:00"
+                 maxReceivedMessageSize="10067108864"/>
+      </basicHttpBinding>
+    </bindings>
     <protocolMapping>
         <add binding="basicHttpsBinding" scheme="https" />
     </protocolMapping>    
