--- a/CryptoWCFService/Web.config
+++ b/CryptoWCFService/Web.config
@@ -14,6 +14,11 @@
         <endpoint address="" binding="basicHttpBinding"
                   bindingConfiguration="EncryptionServicesBinding"
                   contract="CryptoWCFService.ICryptoService" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://192.168.0.12/CryptoWCFService/CryptoService.svc"/>
+          </baseAddresses>
+        </host>
       </service>
       <service behaviorConfiguration="CryptoWCFService.FileTransferServiceBehavior"
                name="CryptoWCFService.CloudService">
@@ -22,6 +27,11 @@
                   bindingConfiguration="FileTransferServicesBinding"
                   contract="CryptoWCFService.ICloudService"></endpoint>
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"></endpoint>
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://192.168.0.12/CryptoWCFService/CloudService.svc"/>
+          </baseAddresses>
+        </host>
       </service>
     </services>
     <behaviors>
